--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -25,7 +26,8 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Modules\\GCore\\": "Modules/gCore/app/",
-            "Modules\\GBackup\\": "Modules/gBackup/app/"
+            "Modules\\GBackup\\": "Modules/gBackup/app/",
+            "Modules\\GMonitorix\\": "Modules/gMonitorix/app/"
         }
     },
     "autoload-dev": {
